Fixed friends page overflow problem

--- a/src/assets/sass/_layout.scss
+++ b/src/assets/sass/_layout.scss
@@ -68,7 +68,7 @@ a {
   background: #f6f6f6;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 4rem .5rem .5rem 1rem;
+  padding: 4rem .8rem .5rem 0.8rem;
   width: 100%;
 
   & > .my-content {
